--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-constants": "~9.1.1",
     "expo-location": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "polished": "^3.6.6",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
