feat: add netinfo package

--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@expo-google-fonts/roboto": "^0.1.0",
     "@expo/vector-icons": "^10.2.1",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "^5.9.6",
+    "@react-native-community/netinfo": "5.9.6",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
     "expo-location": "~8.2.1",
+    "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "polished": "^3.6.6",
     "react": "~16.11.0",
