--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-location": "~8.2.1",
     "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
+    "lottie-react-native": "~2.6.1",
     "polished": "^3.6.6",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -29,6 +30,7 @@
     "react-native-maps": "^0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-modalize": "^2.0.6",
+    "react-native-paper": "^4.1.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
