--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@expo/vector-icons": "^10.2.1",
     "@react-native-community/async-storage": "react-native-community/async-storage",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "5.9.6",
+    "@react-native-community/netinfo": "^5.9",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
