--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-native-community/netinfo": "^5.9",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@unform/core": "^2.1.3",
+    "@unform/mobile": "^2.1.3",
     "axios": "^0.20.0",
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
@@ -38,7 +40,8 @@
     "react-native-svg": "12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "~0.11.7",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
@@ -46,6 +49,7 @@
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@types/styled-components": "^5.1.3",
+    "@types/yup": "^0.29.7",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "eslint": "^7.8.1",
