--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-header-scroll-view": "^0.10.3",
     "react-native-maps": "^0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-modalize": "^2.0.6",
