--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-header-scroll-view": "^0.10.3",
     "react-native-maps": "^0.27.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-modal": "^11.5.6",
     "react-native-modalize": "^2.0.6",
     "react-native-paper": "^4.1.0",
