--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "tccapp",
     "version": "0.0.6",
     "orientation": "portrait",
+    "userInterfaceStyle": "automatic",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
@@ -17,11 +18,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "userInterfaceStyle": "automatic"
     },
     "android": {
       "package": "com.ericsilva.apptcc",
       "versionCode": 1,
+      "userInterfaceStyle": "automatic",
       "config": {
         "googleMaps": {
           "apiKey": "AIzaSyBHAXOz2WSqIt4HziGNdnWXjlz2bf03-k4"
