--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-location": "~8.2.1",
     "expo-permissions": "~9.0.1",
     "expo-status-bar": "^1.0.2",
+    "geolib": "^3.3.1",
     "lottie-react-native": "~2.6.1",
     "polished": "^3.6.6",
     "react": "~16.11.0",
