--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-appearance": "~0.3.3",
+    "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-header-scroll-view": "^0.10.3",
     "react-native-maps": "^0.27.1",
