--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/async-storage": "react-native-community/async-storage",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "^5.9",
+    "@react-native-community/picker": "1.6.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@unform/core": "^2.1.3",
@@ -33,13 +34,17 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-appearance": "~0.3.3",
     "react-native-color-picker": "^0.6.0",
+    "react-native-dropdown-picker": "^3.7.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-image-header-scroll-view": "^0.10.3",
     "react-native-maps": "^0.27.1",
     "react-native-maps-directions": "^1.8.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^11.5.6",
+    "react-native-modal-dropdown": "^0.7.0",
     "react-native-modalize": "^2.0.6",
     "react-native-paper": "^4.1.0",
+    "react-native-picker-select": "^8.0.2",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
@@ -54,6 +59,7 @@
     "@types/": "react-navigation/native",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/react-native-material-dropdown": "^0.11.4",
     "@types/styled-components": "^5.1.3",
     "@types/yup": "^0.29.7",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
