--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Tcc App",
-    "slug": "tccapp",
-    "version": "0.0.6",
+    "name": "Descarte Correto",
+    "slug": "descarte-correto",
+    "version": "0.2.0",
     "orientation": "portrait",
     "userInterfaceStyle": "automatic",
     "icon": "./assets/icon.png",
