--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,35 +1,40 @@
 {
   "env": {
-      "browser": true,
-      "es2020": true,
-      "node": true,
-      "jest": true
+    "browser": true,
+    "es2020": true,
+    "node": true,
+    "jest": true
   },
   "extends": [
-      "plugin:react/recommended",
-      "standard",
-      "plugin:@typescript-eslint/recommended",
-      "prettier/@typescript-eslint",
-      "prettier/standard",
-      "prettier/react"
+    "plugin:react/recommended",
+    "standard",
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "prettier/standard",
+    "prettier/react"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-      "project": "./tsconfig.json",
-      "ecmaFeatures": {
-          "jsx": true
-      },
-      "ecmaVersion": 12,
-      "sourceType": "module"
+    "project": "./tsconfig.json",
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module"
   },
   "plugins": [
-      "react",
-      "@typescript-eslint",
-      "prettier"
+    "react",
+    "@typescript-eslint",
+    "prettier"
   ],
   "rules": {
-      "prettier/prettier": "error",
-      "space-before-function-paren": "off",
-      "react/prop-types": "off"
+    "prettier/prettier": "error",
+    "space-before-function-paren": "off",
+    "react/prop-types": "off",
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": [
+      "error"
+    ],
+    "react/react-in-jsx-scope": "off"
   }
 }
