--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@types/": "react-navigation/native",
+    "@types/node": "^14.14.6",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@types/react-native-material-dropdown": "^0.11.4",
